--- a/elf_files_exe_lib_obj_info_poc.ipynb
+++ b/elf_files_exe_lib_obj_info_poc.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzNXtEWPK/QJBwdzbZvJDL",
+      "authorship_tag": "ABX9TyMfRk4tbfry4JtViZdLm1eW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -321,6 +321,26 @@
     {
       "cell_type": "code",
       "source": [
+        "# Print hex dump of the ELF file\n",
+        "def print_hex_dump(filename):\n",
+        "    with open(filename, 'rb') as f:\n",
+        "        elf_data = f.read()\n",
+        "        print(f\"\\nHex Dump of {filename}:\")\n",
+        "        for i in range(0, len(elf_data), 16):\n",
+        "            chunk = elf_data[i:i+16]\n",
+        "            hex_values = ' '.join(f'{b:02x}' for b in chunk)\n",
+        "            ascii_values = ''.join(chr(b) if 32 <= b <= 126 else '.' for b in chunk)\n",
+        "            print(f'{i:08x}  {hex_values:<48}  {ascii_values}')"
+      ],
+      "metadata": {
+        "id": "y9logZIetIRK"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def main():\n",
         "    # Create and save ELF files\n",
         "    for bits in [32, 64]:\n",
@@ -339,12 +359,14 @@
         "            print_elf_header(elf_header, bits, file_type)\n",
         "            print(f\"\\nParsed Program Header for {filename}:\")\n",
         "            print_program_header(program_header, bits)\n",
-        "            print(f\"\\nString Data for {filename}:\\n{string_data}\")"
+        "            print(f\"\\nString Data for {filename}:\\n{string_data}\")\n",
+        "\n",
+        "            print_hex_dump(filename)"
       ],
       "metadata": {
         "id": "lgphAZmiY8mX"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -358,9 +380,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XALIXn2OY-Rv",
-        "outputId": "db5ae20f-eb30-4832-f6ee-fe57a175f8e2"
+        "outputId": "bd7bb725-5ff1-4ed7-a6e8-1f2761e23abc"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,6 +437,16 @@
             "String Data for executable_32.bin:\n",
             "This is a 32-bit executable ELF file.\n",
             "\n",
+            "Hex Dump of executable_32.bin:\n",
+            "00000000  7f 45 4c 46 01 01 01 00 00 00 00 00 00 00 00 00   .ELF............\n",
+            "00000010  02 00 03 00 01 00 00 00 00 10 00 00 34 00 00 00   ............4...\n",
+            "00000020  00 00 00 00 00 00 00 00 34 00 20 00 01 00 28 00   ........4. ...(.\n",
+            "00000030  00 00 00 00 01 00 00 00 00 00 00 00 00 10 00 00   ................\n",
+            "00000040  00 10 00 00 00 10 00 00 00 10 00 00 07 00 00 00   ................\n",
+            "00000050  00 10 00 00 54 68 69 73 20 69 73 20 61 20 33 32   ....This is a 32\n",
+            "00000060  2d 62 69 74 20 65 78 65 63 75 74 61 62 6c 65 20   -bit executable \n",
+            "00000070  45 4c 46 20 66 69 6c 65 2e                        ELF file.\n",
+            "\n",
             "Parsed ELF Header for shared_32.bin:\n",
             "+-----------------------------------+------------+------------------+\n",
             "|               Field               |   Value    |   Description    |\n",
@@ -456,6 +488,16 @@
             "\n",
             "String Data for shared_32.bin:\n",
             "This is a 32-bit shared library ELF file.\n",
+            "\n",
+            "Hex Dump of shared_32.bin:\n",
+            "00000000  7f 45 4c 46 01 01 01 00 00 00 00 00 00 00 00 00   .ELF............\n",
+            "00000010  03 00 03 00 01 00 00 00 00 00 00 00 34 00 00 00   ............4...\n",
+            "00000020  00 00 00 00 00 00 00 00 34 00 20 00 01 00 28 00   ........4. ...(.\n",
+            "00000030  00 00 00 00 01 00 00 00 00 00 00 00 00 10 00 00   ................\n",
+            "00000040  00 10 00 00 00 10 00 00 00 10 00 00 07 00 00 00   ................\n",
+            "00000050  00 10 00 00 54 68 69 73 20 69 73 20 61 20 33 32   ....This is a 32\n",
+            "00000060  2d 62 69 74 20 73 68 61 72 65 64 20 6c 69 62 72   -bit shared libr\n",
+            "00000070  61 72 79 20 45 4c 46 20 66 69 6c 65 2e            ary ELF file.\n",
             "\n",
             "Parsed ELF Header for object_32.bin:\n",
             "+-----------------------------------+------------+------------------+\n",
@@ -499,6 +541,16 @@
             "String Data for object_32.bin:\n",
             "This is a 32-bit object ELF file.\n",
             "\n",
+            "Hex Dump of object_32.bin:\n",
+            "00000000  7f 45 4c 46 01 01 01 00 00 00 00 00 00 00 00 00   .ELF............\n",
+            "00000010  01 00 03 00 01 00 00 00 00 00 00 00 00 00 00 00   ................\n",
+            "00000020  00 00 00 00 00 00 00 00 34 00 20 00 00 00 28 00   ........4. ...(.\n",
+            "00000030  00 00 00 00 01 00 00 00 00 00 00 00 00 10 00 00   ................\n",
+            "00000040  00 10 00 00 00 10 00 00 00 10 00 00 07 00 00 00   ................\n",
+            "00000050  00 10 00 00 54 68 69 73 20 69 73 20 61 20 33 32   ....This is a 32\n",
+            "00000060  2d 62 69 74 20 6f 62 6a 65 63 74 20 45 4c 46 20   -bit object ELF \n",
+            "00000070  66 69 6c 65 2e                                    file.\n",
+            "\n",
             "Parsed ELF Header for executable_64.bin:\n",
             "+-----------------------------------+------------+------------------+\n",
             "|               Field               |   Value    |   Description    |\n",
@@ -540,6 +592,18 @@
             "\n",
             "String Data for executable_64.bin:\n",
             "This is a 64-bit executable ELF file.\n",
+            "\n",
+            "Hex Dump of executable_64.bin:\n",
+            "00000000  7f 45 4c 46 02 01 01 00 00 00 00 00 00 00 00 00   .ELF............\n",
+            "00000010  02 00 3e 00 01 00 00 00 00 10 00 00 00 00 00 00   ..>.............\n",
+            "00000020  40 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00   @...............\n",
+            "00000030  00 00 00 00 40 00 38 00 01 00 40 00 00 00 00 00   ....@.8...@.....\n",
+            "00000040  01 00 00 00 07 00 00 00 00 00 00 00 00 00 00 00   ................\n",
+            "00000050  00 10 00 00 00 00 00 00 00 10 00 00 00 00 00 00   ................\n",
+            "00000060  00 10 00 00 00 00 00 00 00 10 00 00 00 00 00 00   ................\n",
+            "00000070  00 10 00 00 00 00 00 00 54 68 69 73 20 69 73 20   ........This is \n",
+            "00000080  61 20 36 34 2d 62 69 74 20 65 78 65 63 75 74 61   a 64-bit executa\n",
+            "00000090  62 6c 65 20 45 4c 46 20 66 69 6c 65 2e            ble ELF file.\n",
             "\n",
             "Parsed ELF Header for shared_64.bin:\n",
             "+-----------------------------------+------------+------------------+\n",
@@ -583,6 +647,19 @@
             "String Data for shared_64.bin:\n",
             "This is a 64-bit shared library ELF file.\n",
             "\n",
+            "Hex Dump of shared_64.bin:\n",
+            "00000000  7f 45 4c 46 02 01 01 00 00 00 00 00 00 00 00 00   .ELF............\n",
+            "00000010  03 00 3e 00 01 00 00 00 00 00 00 00 00 00 00 00   ..>.............\n",
+            "00000020  40 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00   @...............\n",
+            "00000030  00 00 00 00 40 00 38 00 01 00 40 00 00 00 00 00   ....@.8...@.....\n",
+            "00000040  01 00 00 00 07 00 00 00 00 00 00 00 00 00 00 00   ................\n",
+            "00000050  00 10 00 00 00 00 00 00 00 10 00 00 00 00 00 00   ................\n",
+            "00000060  00 10 00 00 00 00 00 00 00 10 00 00 00 00 00 00   ................\n",
+            "00000070  00 10 00 00 00 00 00 00 54 68 69 73 20 69 73 20   ........This is \n",
+            "00000080  61 20 36 34 2d 62 69 74 20 73 68 61 72 65 64 20   a 64-bit shared \n",
+            "00000090  6c 69 62 72 61 72 79 20 45 4c 46 20 66 69 6c 65   library ELF file\n",
+            "000000a0  2e                                                .\n",
+            "\n",
             "Parsed ELF Header for object_64.bin:\n",
             "+-----------------------------------+------------+------------------+\n",
             "|               Field               |   Value    |   Description    |\n",
@@ -623,7 +700,19 @@
             "+------------------+-------------+-----------------+---------------------------------+\n",
             "\n",
             "String Data for object_64.bin:\n",
-            "This is a 64-bit object ELF file.\n"
+            "This is a 64-bit object ELF file.\n",
+            "\n",
+            "Hex Dump of object_64.bin:\n",
+            "00000000  7f 45 4c 46 02 01 01 00 00 00 00 00 00 00 00 00   .ELF............\n",
+            "00000010  01 00 3e 00 01 00 00 00 00 00 00 00 00 00 00 00   ..>.............\n",
+            "00000020  00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00   ................\n",
+            "00000030  00 00 00 00 40 00 38 00 00 00 40 00 00 00 00 00   ....@.8...@.....\n",
+            "00000040  01 00 00 00 07 00 00 00 00 00 00 00 00 00 00 00   ................\n",
+            "00000050  00 10 00 00 00 00 00 00 00 10 00 00 00 00 00 00   ................\n",
+            "00000060  00 10 00 00 00 00 00 00 00 10 00 00 00 00 00 00   ................\n",
+            "00000070  00 10 00 00 00 00 00 00 54 68 69 73 20 69 73 20   ........This is \n",
+            "00000080  61 20 36 34 2d 62 69 74 20 6f 62 6a 65 63 74 20   a 64-bit object \n",
+            "00000090  45 4c 46 20 66 69 6c 65 2e                        ELF file.\n"
           ]
         }
       ]
